2011-04-01  Jer Noble  <jer.noble@apple.com>

        Reviewed by Darin Adler.

        WebKit2: Link from PDF opens in a new tab instead of in the same tab
        https://bugs.webkit.org/show_bug.cgi?id=57528

        * WebCore.exp.in: Export MouseEvent::create().

2011-04-01  John Bauman  <jbauman@chromium.org>

        Reviewed by Kenneth Russell.

        Avoid decoding images twice in texImage2D
        https://bugs.webkit.org/show_bug.cgi?id=51498

        Make sure to redecode the image only if it's not opaque and texImage2D
        wouldn't premultiply it anyway.

        * platform/graphics/BitmapImage.h:
        * platform/graphics/cg/GraphicsContext3DCG.cpp:
        (WebCore::GraphicsContext3D::getImageData):
        * platform/graphics/skia/GraphicsContext3DSkia.cpp:
        (WebCore::GraphicsContext3D::getImageData):

2011-04-01  Alexey Proskuryakov  <ap@apple.com>

        32-bit Mac build fix.

        * dom/KeyboardEvent.h: (WebCore::KeypressCommand::KeypressCommand): Use 0U to index a String
        to avoid ambiguity.

2011-04-01  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        Make WebKit2 text input handling more like WebKit1
        https://bugs.webkit.org/show_bug.cgi?id=57649

        * dom/KeyboardEvent.h: (WebCore::KeypressCommand::KeypressCommand): Put back the assertions
        we used to have. It is dangerous to confuse editor commands and selector names - besides the
        presence of a semicolon, they sometimes have different names, and WebKit2 failed to map those.

2011-04-01  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r82711.
        http://trac.webkit.org/changeset/82711
        https://bugs.webkit.org/show_bug.cgi?id=57657

        Made every test crash on XP and Win7 (Requested by
        abarth|gardening on #webkit).

        * loader/cache/CachedResource.cpp:
        (WebCore::CachedResource::canUseCacheValidator):